@@ -9,7 +9,9 @@ import org.jxch.capital.learning.train.dto.TrainDataUpSignalBalanceParam;
 import org.jxch.capital.support.ServiceWrapper;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.Comparator;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -20,28 +22,37 @@ public class TrainDataUpSignalBalancePreProcessor implements TrainDataSignalBala
 
     @Override
     public List<KNodeTrain> kNodeTrainsPostProcess(@NotNull List<KNodeTrain> kNodeTrains, @NotNull ServiceWrapper serviceWrapper) {
-        kNodeTrains = kNodeTrains.stream().filter(kNodeTrain -> !kNodeTrain.isReset()).collect(Collectors.toList());
+        kNodeTrains = kNodeTrains.parallelStream().filter(kNodeTrain -> !kNodeTrain.isReset()).collect(Collectors.toCollection(LinkedList::new));
         var param = serviceWrapper.getParamObj(TrainDataUpSignalBalanceParam.class);
-        int up = kNodeTrains.stream().mapToInt(KNodeTrain::upSignal).sum();
+        double threshold = param.getThreshold();
 
-        if ((double) up / kNodeTrains.size() < 1 - param.getThreshold()) {
-            List<KNodeTrain> sorted = kNodeTrains.stream().filter(kNodeTrain -> !kNodeTrain.isUp())
-                    .sorted(Comparator.comparing(kNodeTrain -> Math.abs(kNodeTrain.getFuturePercent()))).collect(Collectors.toList());
-            while ((double) kNodeTrains.stream().mapToInt(KNodeTrain::upSignal).sum() / kNodeTrains.size() < 1 - param.getThreshold()) {
-                KNodeTrain min = sorted.get(0);
-                sorted.remove(0);
-                kNodeTrains.remove(min);
-            }
-        } else if ((double) up / kNodeTrains.size() > param.getThreshold()) {
-            List<KNodeTrain> sorted = kNodeTrains.stream().filter(KNodeTrain::isUp)
-                    .sorted(Comparator.comparing(kNodeTrain -> Math.abs(kNodeTrain.getFuturePercent()))).collect(Collectors.toList());
-            while ((double) kNodeTrains.stream().mapToInt(KNodeTrain::upSignal).sum() / kNodeTrains.size() > param.getThreshold()) {
-                KNodeTrain min = sorted.get(0);
-                sorted.remove(0);
-                kNodeTrains.remove(min);
-            }
+        long upCount = kNodeTrains.parallelStream().filter(KNodeTrain::isUp).count();
+        long totalCount = kNodeTrains.size();
+
+        // 根据当前的上信号比例，决定增加上信号还是减少上信号
+        if ((double) upCount / totalCount < threshold) {
+            // 移除非上信号节点 up / (size - x) = th
+            long x = totalCount - Math.round(upCount / threshold); // 计算要移除的非上信号数
+            List<KNodeTrain> upList = kNodeTrains.parallelStream().filter(kNodeTrain -> kNodeTrain.isUp()).toList();
+            List<KNodeTrain> notUpList = kNodeTrains.parallelStream().filter(kNodeTrain -> !kNodeTrain.isUp())
+                    .sorted(Comparator.comparing(KNodeTrain::getFuturePercent).reversed())
+                    .limit(totalCount - upList.size() - x)
+                    .toList();
+            kNodeTrains = new LinkedList<>(upList);
+            kNodeTrains.addAll(notUpList);
+        } else if ((double) upCount / totalCount > threshold) {
+            // 移除上信号节点 (up - x) / (size - x) = th
+            int x = (int) Math.floor((upCount - threshold * totalCount) / (1 - threshold)); // 计算要移除的上信号数
+            List<KNodeTrain> notUpList = kNodeTrains.parallelStream().filter(kNodeTrain -> !kNodeTrain.isUp()).toList();
+            List<KNodeTrain> upList = kNodeTrains.parallelStream().filter(kNodeTrain -> kNodeTrain.isUp())
+                    .sorted(Comparator.comparing(KNodeTrain::getFuturePercent).reversed())
+                    .limit(totalCount - notUpList.size() - x)
+                    .toList();
+            kNodeTrains = new LinkedList<>(notUpList);
+            kNodeTrains.addAll(upList);
         }
 
+        Collections.shuffle(kNodeTrains);
         return kNodeTrains;
     }
 
